--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
     "test": "BABEL_ENV=test jest --no-cache",
     "test:coverage": "BABEL_ENV=test jest --coverage --no-cache",
     "test:watch": "BABEL_ENV=test jest --watch",
-    "start": "check-node-version --node $(cat .nvmrc) && NODE_ENV=development rollup -w -c rollup.config.dev.js",
+    "start": "NODE_ENV=development rollup -w -c rollup.config.dev.js --bundleConfigAsCjs",
     "lint": "eslint . --ext .js --ext .jsx --ignore-path .gitignore",
     "lint:fix": "eslint ./src --fix --ext .js --ext .jsx --ignore-path .gitignore",
     "prebuild": "rimraf dist",
-    "build": "check-node-version --node $(cat .nvmrc) && NODE_ENV=production rollup -c rollup.config.cjs.js && NODE_ENV=production rollup -c rollup.config.es.js",
-    "build:commonjs": "check-node-version --node $(cat .nvmrc) && NODE_ENV=production rollup -c rollup.config.cjs.js",
-    "build:es": "check-node-version --node $(cat .nvmrc) && NODE_ENV=production rollup -c rollup.config.es.js",
+    "build": "NODE_ENV=production rollup -c rollup.config.cjs.js --bundleConfigAsCjs && NODE_ENV=production rollup -c rollup.config.es.js --bundleConfigAsCjs",
+    "build:commonjs": "NODE_ENV=production rollup -c rollup.config.cjs.js",
+    "build:es": "NODE_ENV=production rollup -c rollup.config.es.js",
     "postbuild": "node postbuild.js",
-    "build:watch": "check-node-version --node $(cat .nvmrc) && watch 'npm run build' src",
+    "build:watch": "watch 'npm run build' src",
     "semantic-release": "semantic-release",
-    "predeploy": "check-node-version --node $(cat .nvmrc) && rimraf dev/script && NODE_ENV=development rollup -c rollup.config.dev.js",
-    "deploy": "check-node-version --node $(cat .nvmrc) && gh-pages -d dev",
-    "true-level": "check-node-version --node $(cat .nvmrc) && rm -rf ./node_modules ./.babel-cache; npm install"
+    "predeploy": "rimraf dev/script && NODE_ENV=development rollup -c rollup.config.dev.js",
+    "deploy": "gh-pages -d dev",
+    "true-level": "rm -rf ./node_modules ./.babel-cache; npm install"
   },
   "typings": "typings/index.d.ts",
   "repository": {
@@ -50,61 +50,54 @@
   },
   "homepage": "https://github.com/express-labs/pure-react-carousel#readme",
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-external-helpers": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-    "@babel/plugin-transform-object-assign": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@types/react": "^16.7.6",
+    "@babel/core": "^7.26.9",
+    "@babel/eslint-parser": "^7.26.8",
+    "@babel/plugin-external-helpers": "^7.25.9",
+    "@babel/plugin-transform-class-properties": "^7.25.9",
+    "@babel/plugin-transform-object-assign": "^7.25.9",
+    "@babel/plugin-transform-runtime": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^28.0.2",
+    "@rollup/plugin-eslint": "^9.0.5",
+    "@rollup/plugin-image": "^3.0.3",
+    "@rollup/plugin-multi-entry": "^6.0.1",
+    "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-replace": "^6.0.2",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@types/react": "^19.0.0",
     "acorn": "^6.0.4",
-    "babel-eslint": "^10.0.3",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "check-node-version": "^4.2.1",
     "clone": "^2.1.1",
     "commitizen": "^3.0.7",
     "cz-conventional-changelog": "^2.1.0",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
     "escape-string-regexp": "^1.0.5",
-    "eslint": "^5.8.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-mrb3k-jest": "^1.3.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^22.0.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-react": "7.14.3",
+    "eslint": "^9.20.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jest": "^24.7.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-react": "^7.37.4",
     "gh-pages": "^2.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
-    "node-sass": "^4.12.0",
     "object.omit": "^3.0.0",
     "raf": "^3.4.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-redux": "^5.1.0",
-    "react-test-renderer": "^16.6.0",
-    "redux": "^4.0.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "react-test-renderer": "^19.0.0",
+    "redux": "^5.0.1",
     "regenerator-runtime": "^0.10.5",
     "replace-in-file": "^3.4.2",
     "rimraf": "^3.0.2",
-    "rollup": "^1.20.3",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-eslint": "^5.0.0",
-    "rollup-plugin-img": "^1.1.0",
-    "rollup-plugin-livereload": "^1.0.1",
-    "rollup-plugin-multi-entry": "^2.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-serve": "^1.0.1",
-    "rollup-plugin-uglify": "^6.0.3",
-    "rollup-plugin-uglify-es": "0.0.1",
-    "rollup-watch": "^4.3.1",
+    "rollup": "^4.34.8",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-serve": "^2.0.3",
+    "sass": "^1.85.0",
     "semantic-release": "^19.0.5",
     "uglify-es": "^3.3.5",
     "waait": "^1.0.5",
@@ -117,7 +110,7 @@
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "deep-freeze": "0.0.1",
-    "deepmerge": "^2.2.1",
+    "deepmerge": "^4.3.1",
     "equals": "^1.0.5",
     "prop-types": "^15.6.2"
   },
