--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -1,14 +1,15 @@
 {
   "root": true,
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
     "ecmaVersion": 2018,
     "ecmaFeatures": {
       "jsx": true
-    },
+    }
   },
   "env": {
     "browser": true,
+    "node": true,
     "es6": true
   },
   "globals": {
@@ -16,16 +17,11 @@
     "react": true,
     "react-dom": true
   },
-  "extends": [
-    "airbnb"
-  ],
-
   "plugins": [
     "react",
     "jsx-a11y"
   ],
   "rules": {
-    "import/no-extraneous-dependencies": ["error", { "peerDependencies": true }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/forbid-prop-types": "off",
     "react/destructuring-assignment": [0, "never"],
@@ -39,7 +35,7 @@
     "jsx-a11y/label-has-associated-control": [ 2, {
       "labelAttributes": ["label"],
       "controlComponents": ["input", "select"],
-      "depth": 3,
-    }],
+      "depth": 3
+    }]
   }
 }
