chore: add copy to build step

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "lint": "eslint . --ext .js --ext .jsx --ignore-path .gitignore",
     "lint:fix": "eslint ./src --fix --ext .js --ext .jsx --ignore-path .gitignore",
     "prebuild": "rimraf dist",
-    "build": "NODE_ENV=production rollup -c rollup.config.cjs.js --bundleConfigAsCjs && NODE_ENV=production rollup -c rollup.config.es.js --bundleConfigAsCjs",
+    "copy": "cp package.json dist/ && cp README.md dist/",
+    "build": "NODE_ENV=production rollup -c rollup.config.cjs.js --bundleConfigAsCjs && NODE_ENV=production rollup -c rollup.config.es.js --bundleConfigAsCjs && npm run copy",
     "build:commonjs": "NODE_ENV=production rollup -c rollup.config.cjs.js",
     "build:es": "NODE_ENV=production rollup -c rollup.config.es.js",
     "postbuild": "node postbuild.js",
